[package]
name = "roameo"
version = "0.2.4"
edition = "2018"
description = "Test state of current network interfaces against command line options."
license = "GPL-3.0-only"

[dependencies]
libc = "0.2"
nix = { version = "0.24", features = ["net"] }
socket2 = "0.4"
clap = "3.1"
exitcode = "1.1"
log = "0.4"
env_logger = "0.10"
network-interface = "0.1"

